tests/errors/semantics/array_size_must_be_positive.odl
main :: () -> void  {
    y :: -1;
    arr := [y]int;
};